<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/signatureRightLayout"
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorDark"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/clearSignatureText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/clear"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/useSignatureLayout"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_gravity="center"
                android:background="@drawable/signature_use_btn"
                android:gravity="center"
                android:text="@string/use_signature"
                android:textColor="@color/colorWhite"
                android:textSize="21sp"></Button>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|bottom">

                <ImageView
                    android:id="@+id/saveSignatureImg"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginBottom="38dp"
                    android:src="@drawable/close_signature" />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/signatureLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/signatureRightLayout"
            android:background="@color/colorWhite">

            <com.ddcx.lang.rentfive.signaturepad.views.SignaturePad
                android:id="@+id/signature"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/signatureTipsTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/signature_tips"
                android:textColor="@color/colorGray"
                android:textSize="14sp"
                android:textStyle="bold" />
        </FrameLayout>
    </RelativeLayout>

</LinearLayout>
