<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/leftMolde"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="@color/colorDark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:rotation="-90"
                android:text="@string/take_phonto"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/closeSignature"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="17dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/closeSignatureImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/signature_back" />
            </LinearLayout>
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/signatureLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBlack"
            android:gravity="center"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/signatureRightLayout"
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:background="@color/colorDark"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/clearSignatureBtn"
                    android:layout_width="51dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/signature_redis_corner"
                    android:gravity="center"
                    android:text="@string/clear"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <LinearLayout
                        android:id="@+id/enableSignature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/enableSignatureImg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/enable_signature" />

                        <TextView
                            android:id="@+id/isSiganatureText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="标注"
                            android:textColor="@color/colorWhite"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/useSignatureBtn"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_gravity="center"
                android:background="@drawable/signature_use_btn"
                android:gravity="center"
                android:text="@string/use_signature"
                android:textColor="@color/colorWhite"
                android:textSize="21sp"></Button>

            <LinearLayout
                android:id="@+id/rightModle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|bottom">

                <LinearLayout
                    android:id="@+id/reTakePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/saveSignatureImg"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/close_signature" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="17dp"
                        android:layout_marginTop="9dp"
                        android:text="@string/retake_photo"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
